@@ -580,7 +580,11 @@ void Core::openDVD(QString dvd_url) {
 	mset.reset();
 
 	mset.current_title_id = title;
-	mset.current_chapter_id = dvd_first_chapter();
+#if GENERIC_CHAPTER_SUPPORT
+	mset.current_chapter_id = firstChapter();
+#else
+	mset.current_chapter_id = dvdFirstChapter();
+#endif
 	mset.current_angle_id = 1;
 
 	/* initializeMenus(); */
@@ -760,10 +764,14 @@ void Core::newMediaPlaying() {
 		}
 	}
 
+#if GENERIC_CHAPTER_SUPPORT
+	if (mdat.chapters > 0) {
+#else
 	// mkv chapters
 	if (mdat.mkv_chapters > 0) {
+#endif
 		// Just to show the first chapter checked in the menu
-		mset.current_chapter_id = mkv_first_chapter();
+		mset.current_chapter_id = firstChapter();
 	}
 
 	mdat.initialized = TRUE;
@@ -1169,10 +1177,12 @@ void Core::startMplayer( QString file, double seek ) {
 
 	proc->addArgument("-identify");
 
+#if GENERIC_CHAPTER_SUPPORT
 	if (MplayerVersion::isMplayerAtLeast(27667)) {
 		// From r27667 the number of chapters can be obtained from ID_CHAPTERS
 		mset.current_chapter_id = 0; // Reset chapters
 	} else {
+#endif
 		// We need this to get info about mkv chapters
 		if (is_mkv) {
 			proc->addArgument("-msglevel");
@@ -1184,7 +1194,9 @@ void Core::startMplayer( QString file, double seek ) {
 			// (time would be relative to chapter)
 			mset.current_chapter_id = 0;
 		}
+#if GENERIC_CHAPTER_SUPPORT
 	}
+#endif
 	
 	proc->addArgument("-slave");
 
@@ -1491,7 +1503,11 @@ void Core::startMplayer( QString file, double seek ) {
 		proc->addArgument("-chapter");
 		int chapter = mset.current_chapter_id;
 		// Fix for older versions of mplayer:
-		if ((mdat.type == TYPE_DVD) && (dvd_first_chapter() == 0)) chapter++;
+#if GENERIC_CHAPTER_SUPPORT
+		if ((mdat.type == TYPE_DVD) && (firstChapter() == 0)) chapter++;
+#else
+		if ((mdat.type == TYPE_DVD) && (dvdFirstChapter() == 0)) chapter++;
+#endif
 		proc->addArgument( QString::number( chapter ) );
 	}
 
@@ -2807,8 +2823,12 @@ void Core::changeChapter(int ID) {
 
 	if (ID != mset.current_chapter_id) {
 		//if (QFileInfo(mdat.filename).extension().lower()=="mkv") {
+#if GENERIC_CHAPTER_SUPPORT
+		if (mdat.type != TYPE_DVD) {
+#else
 		if (mdat.mkv_chapters > 0) {
 			// mkv doesn't require to restart
+#endif
 			tellmp("seek_chapter " + QString::number(ID) +" 1");
 			mset.current_chapter_id = ID;
 			updateWidgets();
@@ -2832,33 +2852,47 @@ void Core::changeChapter(int ID) {
 	}
 }
 
-int Core::mkv_first_chapter() {
+int Core::firstChapter() {
 	if (MplayerVersion::isMplayerAtLeast(25391)) 
 		return 1;
 	else
 		return 0;
 }
 
-int Core::dvd_first_chapter() {
+#if !GENERIC_CHAPTER_SUPPORT
+int Core::dvdFirstChapter() {
 	// TODO: check if the change really happens in the same version as mkv
-	return mkv_first_chapter();
+	return firstChapter();
 }
+#endif
 
 void Core::prevChapter() {
 	qDebug("Core::prevChapter");
 
+#if GENERIC_CHAPTER_SUPPORT
+	int last_chapter = 0;
+	int first_chapter = firstChapter();
+
+	last_chapter = mdat.chapters + firstChapter() - 1;
+
+	int ID = mset.current_chapter_id - 1;
+	if (ID < first_chapter) {
+		ID = last_chapter;
+	}
+	changeChapter(ID);
+#else
 	int last_chapter = 0;
 	bool matroshka = (mdat.mkv_chapters > 0);
 
-	int first_chapter = dvd_first_chapter();
-	if (matroshka) first_chapter = mkv_first_chapter();
+	int first_chapter = dvdFirstChapter();
+	if (matroshka) first_chapter = firstChapter();
 
 	// Matroshka chapters
-	if (matroshka) last_chapter = mdat.mkv_chapters + mkv_first_chapter() - 1;
+	if (matroshka) last_chapter = mdat.mkv_chapters + firstChapter() - 1;
 	else
 	// DVD chapters
 	if (mset.current_title_id > 0) {
-		last_chapter = mdat.titles.item(mset.current_title_id).chapters() + dvd_first_chapter() -1;
+		last_chapter = mdat.titles.item(mset.current_title_id).chapters() + dvdFirstChapter() -1;
 	}
 
 	int ID = mset.current_chapter_id - 1;
@@ -2866,27 +2900,39 @@ void Core::prevChapter() {
 		ID = last_chapter;
 	}
 	changeChapter(ID);
+#endif
 }
 
 void Core::nextChapter() {
 	qDebug("Core::nextChapter");
 
+#if GENERIC_CHAPTER_SUPPORT
+	int last_chapter = 0;
+	last_chapter = mdat.chapters + firstChapter() - 1;
+
+	int ID = mset.current_chapter_id + 1;
+	if (ID > last_chapter) {
+		ID = firstChapter();
+	}
+	changeChapter(ID);
+#else
 	int last_chapter = 0;
 	bool matroshka = (mdat.mkv_chapters > 0);
 
 	// Matroshka chapters
-	if (matroshka) last_chapter = mdat.mkv_chapters + mkv_first_chapter() - 1;
+	if (matroshka) last_chapter = mdat.mkv_chapters + firstChapter() - 1;
 	else
 	// DVD chapters
 	if (mset.current_title_id > 0) {
-		last_chapter = mdat.titles.item(mset.current_title_id).chapters() + dvd_first_chapter() - 1;
+		last_chapter = mdat.titles.item(mset.current_title_id).chapters() + dvdFirstChapter() - 1;
 	}
 
 	int ID = mset.current_chapter_id + 1;
 	if (ID > last_chapter) {
-		if (matroshka) ID = mkv_first_chapter(); else ID = dvd_first_chapter();
+		if (matroshka) ID = firstChapter(); else ID = dvdFirstChapter();
 	}
 	changeChapter(ID);
+#endif
 }
 
 void Core::changeAngle(int ID) {
